@@ -1,3 +1,7 @@
+2007-05-17  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter/PersonGroup.cs: Added RemovePerson method to remove a person
+
 2007-05-17  Boyd Timothy <btimothy@gmail.com> 
 
 	* Banter.mdp, Banter/HIGMessageDialog.cs, Banter/Makefile.am: Added
